--- a/templates/sheets/HeroSheet.html
+++ b/templates/sheets/HeroSheet.html
@@ -17,6 +17,7 @@
     <nav class="sheet-tabs tabs" data-group="primary">
         <a class="item" data-tab="description">Description</a>
         <a class="item" data-tab="items">Items</a>
+        <a class="item" data-tab="items">Test</a>
     </nav>
 
     {{!-- Sheet Body --}}
