--- a/templates/sheets/HeroSheet.html
+++ b/templates/sheets/HeroSheet.html
@@ -7,7 +7,7 @@
         <div class="header-fields">
             <h1 class="charname"><input name="name" type="text" value="{{actor.name}}" placeholder="Name"/></h1>
             <div class="resources grid grid-2col">
-              <input type="text" name="data.status.hp.value" value="{{data.status.hp.value}}" data-dtype="Number"/>
+              <input type="text" name="data.info.hp.value" value="{{data.info.hp.value}}" data-dtype="Number"/>
             </div>
             <div class="abilities grid grid-3col">{{!-- abilities here --}}</div>
         </div>
