--- a/templates/sheets/HeroSheet.html
+++ b/templates/sheets/HeroSheet.html
@@ -4,7 +4,7 @@
     <header class="sheet-header">
         {{!-- Header stuff goes here --}}
         <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="100" width="100"/>
-        <div class="header-fields">
+        <div class="header-fields" style="max-width: 30%;">
             <h1 class="charname"><input name="name" type="text" value="{{actor.name}}" placeholder="Name"/></h1>
             <div class="resources grid grid-2col">
               <input type="text" name="data.info.hp.value" value="{{data.info.hp.value}}" data-dtype="Number"/>
