--- a/templates/sheets/HeroSheet.html
+++ b/templates/sheets/HeroSheet.html
@@ -5,9 +5,15 @@
         {{!-- Header stuff goes here --}}
         <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" style="height: auto; max-width: 30%;"/>
         <div class="header-fields" style="max-width: 30%;">
-            <h1 class="charname"><input name="name" type="text" value="{{actor.name}}" placeholder="Name"/></h1>
+            <div>
+                <label for="name">Name:</label>
+                <h1 class="charname">
+                    <input id="name" name="name" type="text" value="{{actor.name}}" placeholder="Name"/>
+                </h1>
+            </div>
             <div class="resources grid grid-2col">
-              <input type="text" name="data.info.hp.value" value="{{data.info.hp.value}}" data-dtype="Number"/>
+                <label for="hp">HP</label>
+              <input id="hp" type="text" name="data.info.hp.value" value="{{data.info.hp.value}}" data-dtype="Number"/>
             </div>
             <div class="abilities grid grid-3col">{{!-- abilities here --}} I'm an ability</div>
         </div>
