Documentation and updating classes

--- a/templates/sheets/HeroSheet.html
+++ b/templates/sheets/HeroSheet.html
@@ -26,13 +26,18 @@
             <a class="item" data-tab="bio">Bio</a>
             <a class="item" data-tab="conditions">Conditions</a>
         </nav>
-        <div class="tab items" data-group="primary" data-tab="actions">
+
+        {{!-- Tab Content --}}
+        {{!-- Actions --}}
+        <div class="tab actions" data-group="primary" data-tab="actions">
 
         </div>
-        <div class="tab items" data-group="primary" data-tab="inventory">
+        {{!-- Inventory --}}
+        <div class="tab inventory" data-group="primary" data-tab="inventory">
 
         </div>
-        <div class="tab items" data-group="primary" data-tab="bio">
+        {{!-- Bio --}}
+        <div class="tab bio" data-group="primary" data-tab="bio">
             <div style="max-width: 60%;">
                 <h3>Appearance</h3>
                 <h3>Description</h3>
@@ -52,7 +57,9 @@
             </div>
         
         </div>
-        <div class="tab items" data-group="primary" data-tab="conditions">
+        
+        {{!-- Conditions --}}
+        <div class="tab conditions" data-group="primary" data-tab="conditions">
 
         </div>
 
