--- a/templates/sheets/HeroSheet.html
+++ b/templates/sheets/HeroSheet.html
@@ -6,13 +6,13 @@
         <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" style="height: auto; max-width: 30%;"/>
         <div class="header-fields" style="max-width: 30%;">
             <div>
-                <label for="name">Name:</label>
+                <label for="name">{{localize "emberwind.InfoName" }}</label>
                 <h1 class="charname">
                     <input id="name" name="name" type="text" value="{{actor.name}}" placeholder="Name"/>
                 </h1>
             </div>
             <div class="resources grid grid-2col">
-                <label for="hp">HP</label>
+                <label for="hp">{{ localize "emberwind.InfoHP" }}</label>
               <input id="hp" type="text" name="data.info.hp.value" value="{{data.info.hp.value}}" data-dtype="Number"/>
             </div>
             <div class="abilities grid grid-3col">{{!-- abilities here --}} I'm an ability</div>
@@ -21,15 +21,18 @@
 
     {{!-- Sheet Tab Navigation --}}
         <nav style="max-width: 60%;" class="sheet-tabs tabs" data-group="primary">
-            <a class="item" data-tab="actions">Actions</a>
-            <a class="item" data-tab="inventory">Inventory</a>
-            <a class="item" data-tab="bio">Bio</a>
-            <a class="item" data-tab="conditions">Conditions</a>
+            <a class="item active" data-tab="actions">{{ localize "emberwind.Actions" }}</a>
+            <a class="item" data-tab="inventory">{{ localize "emberwind.Inventory"}}</a>
+            <a class="item" data-tab="bio">{{ localize "emberwind.Bio"}}</a>
+            <a class="item" data-tab="conditions">{{ localize "emberwind.Conditions"}}</a>
         </nav>
+        
 
+    {{!-- Sheet Body --}}
+    <section class="sheet-body">
         {{!-- Tab Content --}}
         {{!-- Actions --}}
-        <div class="tab actions" data-group="primary" data-tab="actions">
+        <div class="tab actions flexcol" data-group="primary" data-tab="actions">
             <table>
                 <tr>
                   <th>Name</th>
@@ -63,11 +66,11 @@
 
         </div>
         {{!-- Inventory --}}
-        <div class="tab inventory" data-group="primary" data-tab="inventory">
+        <div class="tab inventory flexcol" data-group="primary" data-tab="inventory">
 
         </div>
         {{!-- Bio --}}
-        <div class="tab bio" data-group="primary" data-tab="bio">
+        <div class="tab bio flexcol" data-group="primary" data-tab="bio">
             <div style="max-width: 60%;">
                 <h3>Appearance</h3>
                 <h3>Description</h3>
@@ -89,12 +92,8 @@
         </div>
 
         {{!-- Conditions --}}
-        <div class="tab conditions" data-group="primary" data-tab="conditions">
+        <div class="tab conditions flexcol" data-group="primary" data-tab="conditions">
 
         </div>
-
-    {{!-- Sheet Body --}}
-    <section class="sheet-body">
-        {{!-- Tab content goes here --}}
     </section>
 </form>
