--- a/templates/sheets/components/hero-actions.hbs
+++ b/templates/sheets/components/hero-actions.hbs
@@ -1,30 +1,32 @@
-<table>
-    <tr>
-        <th>{{ localize "emberwind.ActionsName"}}</th>
-        <th>{{ localize "emberwind.ActionsType" }}</th>
-        <th>{{ localize "emberwind.ActionsTarget" }}</th>
-        <th>{{ localize "emberwind.ActionsRange" }}</th>
-        <th>{{ localize "emberwind.ActionsEffect" }}</th>
-        <th>{{ localize "emberwind.ActionsSpeed" }}</th>
-    </tr>
-    <tr>
-        <td>Movement</td>
-        <td>*You cannot end your movement in an occupied square</td>
-    </tr>
-    <tr>
-        <td>Move Action</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>Move 1 - 5 Squares. Can move through friendly Combatants.</td>
-        <td>Slow</td>
-    </tr>
-    <tr>
-        <td>Shift Action</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>Move 1 Square. Can move through friendly Combatants.</td>
-        <td>Fast</td>
-    </tr>
-</table>
+<div>
+    <table>
+        <tr>
+            <th>{{ localize "emberwind.ActionsName"}}</th>
+            <th>{{ localize "emberwind.ActionsType" }}</th>
+            <th>{{ localize "emberwind.ActionsTarget" }}</th>
+            <th>{{ localize "emberwind.ActionsRange" }}</th>
+            <th>{{ localize "emberwind.ActionsEffect" }}</th>
+            <th>{{ localize "emberwind.ActionsSpeed" }}</th>
+        </tr>
+        <tr>
+            <td>{{ localize "emberwind.ActionsMovement" }}</td>
+            <td>{{ localize "emberwind.ActionsMovementNote" }}</td>
+        </tr>
+        <tr>
+            <td>Move Action</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>Move 1 - 5 Squares. Can move through friendly Combatants.</td>
+            <td>Slow</td>
+        </tr>
+        <tr>
+            <td>Shift Action</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>Move 1 Square. Can move through friendly Combatants.</td>
+            <td>Fast</td>
+        </tr>
+    </table>
+</div>
