--- a/templates/sheets/HeroSheet.hbs
+++ b/templates/sheets/HeroSheet.hbs
@@ -33,7 +33,9 @@
         {{!-- Tab Content --}}
         {{!-- Actions --}}
         <div class="tab actions flexcol" data-group="primary" data-tab="actions">
+            <div class="header-summary flexcol">
             {{> "systems/emberwind-system/templates/sheets/components/hero-actions.hbs"}}
+            </div>
         </div>
         {{!-- Inventory --}}
         <div class="tab inventory flexcol" data-group="primary" data-tab="inventory">
