push for fixing content of tabs

--- a/templates/sheets/components/hero-actions.hbs
+++ b/templates/sheets/components/hero-actions.hbs
@@ -1,5 +1,9 @@
+
+This is tab {{actions}}.<br>
+{{content}}
 <div>
     <table>
+    <tbody>
         <tr>
             <th>{{ localize "emberwind.ActionsName"}}</th>
             <th>{{ localize "emberwind.ActionsType" }}</th>
@@ -28,5 +32,6 @@
             <td>Move 1 Square. Can move through friendly Combatants.</td>
             <td>Fast</td>
         </tr>
+    </tbody>
     </table>
 </div>
