added in more js

--- a/templates/sheets/HeroSheet.hbs
+++ b/templates/sheets/HeroSheet.hbs
@@ -45,6 +45,7 @@
         
         <div class="tab inventory flexcol" data-group="primary-tabs" data-tab="inventory">
             Fixed content for tab {{inventory}}<br>
+            {{{content}}}
         </div>
         
 
