removing tab test

--- a/templates/sheets/HeroSheet.hbs
+++ b/templates/sheets/HeroSheet.hbs
@@ -51,8 +51,8 @@
 
         {{!-- Bio --}}
         
-        <div class="tab bio flexcol" data-group="primary-tabs" data-tab="bio">
-             Fixed content for tab {{bio}}<br>
+        {{!-- <div class="tab bio flexcol" data-group="primary-tabs" data-tab="bio">
+             Fixed content for tab {{bio}}<br> --}}
             <div style="max-width: 60%;">
                 <h3>{{ localize "emberwind.Appearance" }}</h3>
                 <h3>{{ localize "emberwind.Description" }}</h3>
@@ -71,7 +71,7 @@
                 <input type="text"/>
             </div>
         
-        </div>
+        {{!-- </div> --}}
         
         {{!-- Conditions --}}
         
