remove tab to test content

--- a/templates/sheets/HeroSheet.hbs
+++ b/templates/sheets/HeroSheet.hbs
@@ -33,12 +33,12 @@
         {{!-- Tab Content --}}
         {{!-- Actions --}}
         
-        <div class="tab actions flexcol" data-group="primary-tabs" data-tab="actions">
-            <div class="header-summary flexcol">
+        {{!-- <div class="tab actions flexcol" data-group="primary-tabs" data-tab="actions">
+            <div class="header-summary flexcol"> --}}
                 Fixed content for tab {{actions}}<br>
             {{> "systems/emberwind-system/templates/sheets/components/hero-actions.hbs" this}}
             </div>
-        </div>
+        {{!-- </div> --}}
         
 
         {{!-- Inventory --}}
