--- a/templates/sheets/components/hero-actions.hbs
+++ b/templates/sheets/components/hero-actions.hbs
@@ -1,6 +1,4 @@
 
-This is tab {{actions}}.<br>
-{{content}}
 <div>
     <table>
     <tbody>
@@ -13,14 +11,17 @@ This is tab {{actions}}.<br>
             <th>{{ localize "emberwind.ActionsSpeed" }}</th>
         </tr>
         <tr>
-            <td>{{ localize "emberwind.ActionsMovement" }}</td>
+            <td><h5>{{ localize "emberwind.ActionsMovement" }}</h5></td>
             <td>{{ localize "emberwind.ActionsMovementNote" }}</td>
+            <td></td>
+            <td></td>
+            <td></td>
         </tr>
         <tr>
             <td>Move Action</td>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
+            <td></td>
+            <td></td>
+            <td></td>
             <td>Move 1 - 5 Squares. Can move through friendly Combatants.</td>
             <td>Slow</td>
         </tr>
@@ -31,6 +32,13 @@ This is tab {{actions}}.<br>
             <td>-</td>
             <td>Move 1 Square. Can move through friendly Combatants.</td>
             <td>Fast</td>
+        </tr>
+        <tr>
+            <td><h5>{{ localize "emberwind.ActionsManeuver" }}</h5></td>
+            <td>{{ localize "emberwind.ActionsManeuverNote" }}</td>
+            <td></td>
+            <td></td>
+            <td></td>
         </tr>
     </tbody>
     </table>
