--- a/templates/sheets/components/hero-actions.hbs
+++ b/templates/sheets/components/hero-actions.hbs
@@ -11,7 +11,7 @@
             <th>{{ localize "emberwind.ActionsSpeed" }}</th>
         </tr>
         <tr>
-            <td><h5>{{ localize "emberwind.ActionsMovement" }}</h5></td>
+            <td><h3>{{ localize "emberwind.ActionsMovement" }}</h3></td>
             <td>{{ localize "emberwind.ActionsMovementNote" }}</td>
             <td></td>
             <td></td>
@@ -34,11 +34,42 @@
             <td>Fast</td>
         </tr>
         <tr>
-            <td><h5>{{ localize "emberwind.ActionsManeuver" }}</h5></td>
+            <td><h3>{{ localize "emberwind.ActionsManeuver" }}</h3></td>
             <td>{{ localize "emberwind.ActionsManeuverNote" }}</td>
             <td></td>
             <td></td>
             <td></td>
+        </tr>
+        <tr>
+            <td>Tumble</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>Move 1-3 Squares. Can move through any Combatant.</td>
+            <td>Slow</td>
+        </tr>
+        <tr>
+            <td><h3>{{ localize "emberwind.ActionsBasic" }}</h3></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Mace [2H]</td>
+            <td>Melee</td>
+            <td>1 Foe</td>
+            <td>1</td>
+            <td>2d12 VS Shield</td>
+            <td>Slow</td>
+        </tr>
+        <tr>
+            <td>Crossbow</td>
+            <td>Ranged</td>
+            <td>1 Foe</td>
+            <td>5</td>
+            <td>2d8 VS Shield</td>
+            <td>Slow</td>
         </tr>
     </tbody>
     </table>
