add Class Action

--- a/templates/sheets/components/hero-actions.hbs
+++ b/templates/sheets/components/hero-actions.hbs
@@ -39,6 +39,7 @@
             <td></td>
             <td></td>
             <td></td>
+            <td></td>
         </tr>
         <tr>
             <td>Tumble</td>
@@ -50,6 +51,7 @@
         </tr>
         <tr>
             <td><h3>{{ localize "emberwind.ActionsBasic" }}</h3></td>
+            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -70,6 +72,22 @@
             <td>5</td>
             <td>2d8 VS Shield</td>
             <td>Slow</td>
+        </tr>
+        <tr>
+            <td><h3>{{ localize "emberwind.ActionsClass" }}</h3></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Tide of Iron</td>
+            <td>Amplify <hr> Exploit</td>
+            <td>1 Melee Action</td>
+            <td>Melee <br> Weapon Range </td>
+            <td><em>Amp. Effect:</em> When you Hit 1 or more Foe(s) with a Melee Action, knock 1
+of those Foes. <em><b>Prone</b></em></td>
+            <td>Fast</td>
         </tr>
     </tbody>
     </table>
