Add more Class Actions

--- a/templates/sheets/components/hero-actions.hbs
+++ b/templates/sheets/components/hero-actions.hbs
@@ -82,12 +82,28 @@
         </tr>
         <tr>
             <td>Tide of Iron</td>
-            <td>Amplify <hr> Exploit</td>
+            <td>Amplify <hr style="width:20px"> Exploit</td>
             <td>1 Melee Action</td>
-            <td>Melee <br> Weapon Range </td>
+            <td>Melee <hr style="width:20px"> Weapon Range </td>
             <td><em>Amp. Effect:</em> When you Hit 1 or more Foe(s) with a Melee Action, knock 1
 of those Foes. <em><b>Prone</b></em></td>
             <td>Fast</td>
+        </tr>
+        <tr>
+            <td>Arc Impulse</td>
+            <td>Sustain <hr style="width:20px"> Spell</td>
+            <td>Self</td>
+            <td> - </td>
+            <td> The next time you Hit with a Melee Action, +1 use of <em>Lightning Spire</em> or <em>White Lightning</em> until the start of your next Turn. <em>Sust. Effect:</em> Repeat Effect</td>
+            <td>Slow</td>
+        </tr>
+        <tr>
+            <td>Blitzbolt</td>
+            <td>General <hr style="width:20px"> Spell</td>
+            <td>1 Foe</td>
+            <td> Ranged <hr style="width:20px"> 7  </td>
+            <td> 1d12 Damage vs. Resistance. <em>Amp. Effect:</em> Expend 1 Fast Action to Teleport to an unoccupied Square adjacent to Hit Foe.</td>
+            <td>Slow</td>
         </tr>
     </tbody>
     </table>
