--- a/templates/sheets/components/hero-actions.hbs
+++ b/templates/sheets/components/hero-actions.hbs
@@ -79,6 +79,7 @@
             <td></td>
             <td></td>
             <td></td>
+            <td></td>
         </tr>
         <tr>
             <td>Tide of Iron</td>
@@ -91,7 +92,7 @@ of those Foes. <em><b>Prone</b></em></td>
         </tr>
         <tr>
             <td>Arc Impulse</td>
-            <td>Sustain <hr style="width:20px"> Spell</td>
+            <td><div>Sustain <hr style="width:20px"> Spell</div>></td>
             <td>Self</td>
             <td> - </td>
             <td> The next time you Hit with a Melee Action, +1 use of <em>Lightning Spire</em> or <em>White Lightning</em> until the start of your next Turn. <em>Sust. Effect:</em> Repeat Effect</td>
