--- a/templates/sheets/components/hero-actions.hbs
+++ b/templates/sheets/components/hero-actions.hbs
@@ -16,6 +16,7 @@
             <td></td>
             <td></td>
             <td></td>
+            <td>S</td>
         </tr>
         <tr>
             <td>Move Action</td>
@@ -92,7 +93,7 @@ of those Foes. <em><b>Prone</b></em></td>
         </tr>
         <tr>
             <td>Arc Impulse</td>
-            <td><div>Sustain <hr style="width:20px"> Spell</div>></td>
+            <td><div>Sustain <hr style="width:20px"> Spell</div></td>
             <td>Self</td>
             <td> - </td>
             <td> The next time you Hit with a Melee Action, +1 use of <em>Lightning Spire</em> or <em>White Lightning</em> until the start of your next Turn. <em>Sust. Effect:</em> Repeat Effect</td>
