--- a/templates/sheets/components/hero-actions.hbs
+++ b/templates/sheets/components/hero-actions.hbs
@@ -1,4 +1,3 @@
-
 <div>
     <table>
     <tbody>
@@ -87,8 +86,7 @@
             <td>Amplify <hr style="width:20px"> Exploit</td>
             <td>1 Melee Action</td>
             <td>Melee <hr style="width:20px"> Weapon Range </td>
-            <td><em>Amp. Effect:</em> When you Hit 1 or more Foe(s) with a Melee Action, knock 1
-of those Foes. <em><b>Prone</b></em></td>
+            <td><em>Amp. Effect:</em> When you Hit 1 or more Foe(s) with a Melee Action, knock 1 off those Foes. <em><b>Prone</b></em></td>
             <td>Fast</td>
         </tr>
         <tr>
